Homework_Module_3_Session_1

--- a/.env_fake
+++ b/.env_fake
@@ -1,1 +1,3 @@
-SPOTIFY_API_KEY=fsafsd fdsjfnjdsafdfsda fdsf asdfd fdsaf
+REACT_APP_SPOTIFY_CLIENT_ID=""
+REACT_APP_SPOTIFY_SCOPES =""
+REACT_APP_SPOTIFY_REDIRECT_URI = ""
